fix status bar overlap on ios

--- a/pwa/src/index.css
+++ b/pwa/src/index.css
@@ -57,8 +57,8 @@ body::before {
 }
 
 .safe-area {
-  padding-top: env(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-bottom);
+  padding-top: calc(env(safe-area-inset-top, 20px) + 12px);
+  padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 8px);
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
 }
